rust/protocols-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_ServerTriples() {
    assert_eq!(
        ::std::mem::size_of::<ServerTriples>(),
        192usize,
        concat!("Size of: ", stringify!(ServerTriples))
    );
    assert_eq!(
        ::std::mem::align_of::<ServerTriples>(),
        8usize,
        concat!("Alignment of ", stringify!(ServerTriples))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).num as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(num)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).vec_len as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(vec_len)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).a_rand as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(a_rand)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).b_rand as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(b_rand)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).c_rand as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(c_rand)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).a_share as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(a_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).b_share as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(b_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).c_share as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(c_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).a_mac_share as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(a_mac_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).b_mac_share as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(b_mac_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).c_mac_share as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(c_mac_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).a_ct as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(a_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).b_ct as *const _ as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(b_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).c_ct as *const _ as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(c_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).a_mac_ct as *const _ as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(a_mac_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).b_mac_ct as *const _ as usize },
        152usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(b_mac_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).c_mac_ct as *const _ as usize },
        168usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(c_mac_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerTriples>())).mac_key as *const _ as usize },
        184usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerTriples),
            "::",
            stringify!(mac_key)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClientTriples {
    pub num: u32,
    pub vec_len: u64,
    pub a_ct: SerialCT,
    pub b_ct: SerialCT,
    pub a_share: *mut u64,
    pub b_share: *mut u64,
    pub c_share: *mut u64,
    pub a_mac_share: *mut u64,
    pub b_mac_share: *mut u64,
    pub c_mac_share: *mut u64,
}
#[test]
fn bindgen_test_layout_ClientTriples() {
    assert_eq!(
        ::std::mem::size_of::<ClientTriples>(),
        96usize,
        concat!("Size of: ", stringify!(ClientTriples))
    );
    assert_eq!(
        ::std::mem::align_of::<ClientTriples>(),
        8usize,
        concat!("Alignment of ", stringify!(ClientTriples))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).num as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(num)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).vec_len as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(vec_len)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).a_ct as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(a_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).b_ct as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(b_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).a_share as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(a_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).b_share as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(b_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).c_share as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(c_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).a_mac_share as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(a_mac_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).b_mac_share as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(b_mac_share)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientTriples>())).c_mac_share as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientTriples),
            "::",
            stringify!(c_mac_share)
        )
    );
}
extern "C" {
    pub fn client_keygen(key_share: *mut SerialCT) -> ClientFHE;
}
extern "C" {
    pub fn server_keygen(key_share: SerialCT) -> ServerFHE;
}
extern "C" {
    pub fn conv_metadata(
        batch_encoder: *mut ::std::os::raw::c_void,
        image_h: i32,
        image_w: i32,
        filter_h: i32,
        filter_w: i32,
        inp_chans: i32,
        out_chans: i32,
        stride_h: i32,
        stride_w: i32,
        pad_valid: bool,
    ) -> Metadata;
}
extern "C" {
    pub fn fc_metadata(
        batch_encoder: *mut ::std::os::raw::c_void,
        vector_len: i32,
        matrix_h: i32,
    ) -> Metadata;
}
extern "C" {
    pub fn encrypt_vec(cfhe: *const ClientFHE, vec: *const u64, vec_size: u64) -> SerialCT;
}
extern "C" {
    pub fn decrypt_vec(cfhe: *const ClientFHE, ct: *mut SerialCT, size: u64) -> *mut u64;
}
extern "C" {
    pub fn server_mac_ct(
        sfhe: *const ServerFHE,
        ct: *mut SerialCT,
        mac_share: *const u64,
        size: u64,
        mac_key: u64,
    ) -> SerialCT;
}
extern "C" {
    pub fn client_input_auth(
        sfhe: *const ServerFHE,
        ct: *mut SerialCT,
        shares: *const u64,
        rand: *const u64,
        size: u64,
    ) -> SerialCT;
}
extern "C" {
    pub fn client_conv_preprocess(
        cfhe: *const ClientFHE,
        data: *const Metadata,
        image: *const *const u64,
    ) -> ClientShares;
}
extern "C" {
    pub fn server_conv_preprocess(
        sfhe: *const ServerFHE,
        data: *const Metadata,
        filters: *const *const *const u64,
    ) -> *mut *mut *mut *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn server_conv_preprocess_shares(
        sfhe: *const ServerFHE,
        data: *const Metadata,
        linear_share: *const *const u64,
        linear_mac_share: *const *const u64,
        r_mac_share: *const *const u64,
        mac_key_a: u64,
        mac_key_b: u64,
    ) -> ServerShares;
}
extern "C" {
    pub fn client_fc_preprocess(
        cfhe: *const ClientFHE,
        data: *const Metadata,
        vector: *const u64,
    ) -> ClientShares;
}
extern "C" {
    pub fn server_fc_preprocess(
        sfhe: *const ServerFHE,
        data: *const Metadata,
        matrix: *const *const u64,
    ) -> *mut *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn server_fc_preprocess_shares(
        sfhe: *const ServerFHE,
        data: *const Metadata,
        linear_share: *const u64,
        linear_mac_share: *const u64,
        r_mac_share: *const u64,
        mac_key_a: u64,
        mac_key_b: u64,
    ) -> ServerShares;
}
extern "C" {
    pub fn server_triples_preprocess(
        sfhe: *const ServerFHE,
        num_triples: u32,
        a_rand: *const u64,
        b_rand: *const u64,
        c_rand: *const u64,
        a_share: *const u64,
        b_share: *const u64,
        c_share: *const u64,
        a_mac_share: *const u64,
        b_mac_share: *const u64,
        c_mac_share: *const u64,
        mac_key: u64,
    ) -> ServerTriples;
}
